removed height maximum on pantry ingredients div to prevent horizontal scrolling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@ body {
 .ingredient-container {
   display: flex;
   flex-direction: column;
-  height: 700px;
+  /* height: 700px; */
   max-width: 520px;
   overflow-y: scroll;
 }
